<resources>
    <string name="app_name">App_SQL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="finished">Finished</string>
    <string name="wanttoread">Want to Read</string>
    <string name="isreading">Is Reading</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="cancel">cancel</string>
    <string name="add">add</string>
    <string name="genre">genre</string>
    <string name="edit">edit</string>
    <string name="review">review</string>
    <string name="note">note</string>
    <string name="review_of_book">Review of Book</string>
    <string name="notes">Notes</string>
    <string name="delete">delete</string>
</resources>